Correcciones de texto de penny

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <section class="carrusel" id="principio">
         <div class="movil-carrusel">
             <!-- <h1 class="title">Penny <br>Costas</h1> -->
-            <p>La pintura es poesía muda;<br> la poesía pintura ciega.</p>
+            <p>El niño incomprendido<br>será incomprendido siempre.</p>
 
             <a href="https://www.instagram.com/penny.costas/" class="btn">
                 Ver Obras</a>
@@ -106,7 +106,7 @@
             <!-- <h1 class="title">Penny <br>Costas</h1> -->
             <div class="fondoAjuste">
                 <div class="desktop-carrusel-texto">
-                    <p>"La pintura es poesía muda; la poesía pintura ciega."</p>
+                    <p>"El niño incomprendido será incomprendido siempre."</p>
 
                     <a href="https://www.instagram.com/penny.costas/" class="btn-desktop">
                         Ver Obras</a>
@@ -124,7 +124,19 @@
                     alt="Foto de PennyCostas">
             </div>
             <div class="contenedor_autor_texto">
-                <p class="descripcion__autor">Bueno mi nombre obviamente no es Penny Costas, sino que detras de este
+                <p class="descripcion__autor">
+                    Bueno mi nombre obviamente no es Penny Costas, sino que detrás de este pseudónimo estoy yo, Rodrigo
+                    Romero, un artista que busca mostrarle al mundo su arte. A los 8 años aproximadamente comencé a
+                    dibujar y mientras crecía, a pintar. Siempre lo hice a mi manera y a la gente le gusta, por lo que
+                    tomé la decisión de dejar mi trabajo y dedicarme pura y exclusivamente a esto cueste lo que cueste;
+                    es lo que siempre quise: hacer algo que me haga feliz, aunque los resultados no sean los esperados.
+                    Uno de mis sueños siempre fue tener una marca y en algún momento poder vivir de ella, entonces dije
+                    "listo, me mando" y creé Penny Costas, una marca/personaje que busca que los amantes del arte lleven
+                    una prenda, tengan un cuadro o lo que sea diseñado por mi. Estas piezas de arte serán únicas e
+                    irrepetibles: aquella persona que adquiera una pieza Penny, contará en su perchero y/o ambiente con
+                    una prenda o cuadro pintado y texturizado a mano, único en el mundo. No se si esto llegue a algún
+                    lado, pero créeme que voy a seguir intentando, voy a hacer siempre lo que me haga feliz.
+                    <!-- Bueno mi nombre obviamente no es Penny Costas, sino que detras de este
                     pseudónimo estoy yo, Rodrigo Romero, un artista de 21 años que busca mostrar su arte a esta parte
                     del
                     globo.
@@ -154,7 +166,7 @@
                     persona que adquiera una pieza Penny Costas va a saber que tiene en su ambiente un cuadro pintado y
                     texturizado a mano unico en el mundo.
                     No se si esto llegará a algun lado pero por lo menos lo intenté y siempre voy a hacer lo qie me hace
-                    feliz
+                    feliz -->
                 </p>
                 <a href="https://wa.me/5493434052081" class="btn-autor">
                     Contactame</a>
@@ -175,11 +187,13 @@
                 <p>Las obras de Penny Costa a la venta son seleccionadas para garantizar que tengas una pieza unica e
                     irrepetible.</p>
             </div>
-            <div class="garantia">
-                <img src="css/Imagenes/pago.png" alt="Formas de Pago">
-                <h3 class="titulo">Formas de Pago</h3>
-                <p>Toda la info que necesitas para poder comprar en Penny Costas y como hacerlo.</p>
-            </div>
+            <a href="" class="a_formasDePago">
+                <div class="garantia">
+                    <img src="css/Imagenes/pago.png" alt="Formas de Pago">
+                    <h3 class="titulo">Formas de Pago</h3>
+                    <p>Toda la info que necesitas para poder comprar en Penny Costas y como hacerlo.</p>
+                </div>
+            </a>
             <div class="garantia">
                 <img src="css/Imagenes/certificado.png" alt="Certificación">
                 <h3 class="titulo">Certificación</h3>
