Añadido texto al boton de whatsapp

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 
     <nav>
-        <header class="header">
+        <header class="header" id="principio">
             <div class="mobile" id="mobile">
                 <div class="logo">
                     <a class="a__logo" href="#principio">
@@ -71,7 +71,9 @@
         <div class="desktop">
 
             <header class="header_desktop">
-                <h3 class="logo">Penny Costas</h3>
+                <a class="a__logo" href="#principio">
+                    <h3 class="logo">Penny Costas</h3>
+                </a>
                 <div class="desktop__primary">
                     <li><a href="#principio">
                             Inicio</a></li>
@@ -94,7 +96,7 @@
         </div>
     </nav>
 
-    <section class="carrusel" id="principio">
+    <section class="carrusel">
         <div class="movil-carrusel">
             <!-- <h1 class="title">Penny <br>Costas</h1> -->
             <p>El niño incomprendido<br>será incomprendido siempre.</p>
@@ -168,7 +170,8 @@
                     No se si esto llegará a algun lado pero por lo menos lo intenté y siempre voy a hacer lo qie me hace
                     feliz -->
                 </p>
-                <a href="https://wa.me/5493434052081" class="btn-autor">
+                <a href="https://wa.me/5493434052081?text=Hola, me han gustado mucho tus obras y me gustaría ponerme en contacto para más información"
+                    class="btn-autor">
                     Contactame</a>
             </div>
         </div>
@@ -187,7 +190,8 @@
                 <p>Las obras de Penny Costa a la venta son seleccionadas para garantizar que tengas una pieza unica e
                     irrepetible.</p>
             </div>
-            <a href="" class="a_formasDePago">
+            <a href="https://wa.me/5493434052081?text=Hola, me gustaría tener más información acerca de las formas de pago disponibles, gracias."
+                class="a_formasDePago">
                 <div class="garantia">
                     <img src="css/Imagenes/pago.png" alt="Formas de Pago">
                     <h3 class="titulo">Formas de Pago</h3>
@@ -259,7 +263,9 @@
             <!-- <li><a href="">Tienda</a></li> -->
             <li><a href="#faqs">Como Comprar</a></li>
             <li><a href="#faqs">FAQS</a></li>
-            <li><a href="https://wa.me/5493434052081">Contacto</a></li>
+            <li><a
+                    href="https://wa.me/5493434052081?text=Hola, me han gustado mucho tus obras y me gustaría ponerme en contacto para más información">Contacto</a>
+            </li>
         </div>
         <div class="logo">
             <a href="#principio">PennyCostas</a>
@@ -267,7 +273,9 @@
             </div>
             <div class="redes">
                 <a href="https://www.instagram.com/penny.costas/"><i class="fa-brands fa-instagram"></i></a>
-                <a href=""><i class="fa-brands fa-whatsapp"></i></a>
+                <a
+                    href="https://wa.me/5493434052081?text=Hola, me han gustado mucho tus obras y me gustaría ponerme en contacto para más información"><i
+                        class="fa-brands fa-whatsapp"></i></a>
             </div>
             <div class="derechos">
                 <h4 class="h4">© 2022 DobleF. All rights reserved</h4>
