Correccion en faqs

--- a/index.html
+++ b/index.html
@@ -190,14 +190,14 @@
                 <p>Las obras de Penny Costa a la venta son seleccionadas para garantizar que tengas una pieza unica e
                     irrepetible.</p>
             </div>
-            <a href="https://wa.me/5493434052081?text=Hola, me gustaría tener más información acerca de las formas de pago disponibles, gracias."
-                class="a_formasDePago">
-                <div class="garantia">
+            <div class="garantia">
+                <a href="https://wa.me/5493434052081?text=Hola, me gustaría tener más información acerca de las formas de pago disponibles, gracias."
+                    class="a_formasDePago">
                     <img src="css/Imagenes/pago.png" alt="Formas de Pago">
                     <h3 class="titulo">Formas de Pago</h3>
                     <p>Toda la info que necesitas para poder comprar en Penny Costas y como hacerlo.</p>
-                </div>
-            </a>
+                </a>
+            </div>
             <div class="garantia">
                 <img src="css/Imagenes/certificado.png" alt="Certificación">
                 <h3 class="titulo">Certificación</h3>
@@ -222,37 +222,48 @@
         </header>
 
         <div class="obras">
-
+            <!-- <div class="modal-container"> -->
             <div class="obra">
                 <div class="hot">HOT</div>
                 <img src="css/Imagenes/azul.JPG" alt="Obra">
                 <div class="obra_nombre">Mariposa Azul</div>
             </div>
-            <div class="obra">
-                <div class="hot">HOT</div>
-                <img src="css/Imagenes/casa.JPG" alt="Obra">
-                <div class="obra_nombre">Casa</div>
-            </div>
-            <div class="obra">
-                <div class="hot">HOT</div>
-                <img src="css/Imagenes/reloj.JPG" alt="Obra">
-                <div class="obra_nombre">Reloj</div>
-            </div>
-            <div class="obra">
-                <div class="hot">HOT</div>
-                <img src="css/Imagenes/cirulo_sol.JPG" alt="Obra">
-                <div class="obra_nombre">Paisaje en Circulo</div>
-            </div>
-            <div class="obra">
-                <div class="hot">HOT</div>
-                <img src="css/Imagenes/cabeza.jpg" alt="Obra">
-                <div class="obra_nombre">Cabeza</div>
-            </div>
-            <div class="obra">
-                <div class="hot">HOT</div>
-                <img src="css/Imagenes/campera.JPG" alt="Obra">
-                <div class="obra_nombre">Camisa</div>
-            </div>
+        </div>
+        <div class="obra">
+            <!-- <div class="modal-container active"> -->
+            <div class="hot">HOT</div>
+            <img src="css/Imagenes/casa.JPG" alt="Obra">
+            <div class="obra_nombre">Casa</div>
+        </div>
+        </div>
+        <!-- <div class="modal-container"> -->
+        <div class="obra">
+            <div class="hot">HOT</div>
+            <img src="css/Imagenes/reloj.JPG" alt="Obra">
+            <div class="obra_nombre">Reloj</div>
+        </div>
+        </div>
+        <!-- <div class="modal-container"> -->
+        <div class="obra">
+            <div class="hot">HOT</div>
+            <img src="css/Imagenes/cirulo_sol.JPG" alt="Obra">
+            <div class="obra_nombre">Paisaje en Circulo</div>
+        </div>
+        </div>
+        <!-- <div class="modal-container"> -->
+        <div class="obra">
+            <div class="hot">HOT</div>
+            <img src="css/Imagenes/cabeza.jpg" alt="Obra">
+            <div class="obra_nombre">Cabeza</div>
+        </div>
+        </div>
+        <!-- <div class="modal-container"> -->
+        <div class="obra">
+            <div class="hot">HOT</div>
+            <img src="css/Imagenes/campera.JPG" alt="Obra">
+            <div class="obra_nombre">Camisa</div>
+        </div>
+        </div>
 
         </div>
     </section>
