Correcciones a las obras destacadas

--- a/index.html
+++ b/index.html
@@ -222,48 +222,42 @@
         </header>
 
         <div class="obras">
-            <!-- <div class="modal-container"> -->
+
             <div class="obra">
                 <div class="hot">HOT</div>
                 <img src="css/Imagenes/azul.JPG" alt="Obra">
                 <div class="obra_nombre">Mariposa Azul</div>
             </div>
-        </div>
-        <div class="obra">
-            <!-- <div class="modal-container active"> -->
-            <div class="hot">HOT</div>
-            <img src="css/Imagenes/casa.JPG" alt="Obra">
-            <div class="obra_nombre">Casa</div>
-        </div>
-        </div>
-        <!-- <div class="modal-container"> -->
-        <div class="obra">
-            <div class="hot">HOT</div>
-            <img src="css/Imagenes/reloj.JPG" alt="Obra">
-            <div class="obra_nombre">Reloj</div>
-        </div>
-        </div>
-        <!-- <div class="modal-container"> -->
-        <div class="obra">
-            <div class="hot">HOT</div>
-            <img src="css/Imagenes/cirulo_sol.JPG" alt="Obra">
-            <div class="obra_nombre">Paisaje en Circulo</div>
-        </div>
-        </div>
-        <!-- <div class="modal-container"> -->
-        <div class="obra">
-            <div class="hot">HOT</div>
-            <img src="css/Imagenes/cabeza.jpg" alt="Obra">
-            <div class="obra_nombre">Cabeza</div>
-        </div>
-        </div>
-        <!-- <div class="modal-container"> -->
-        <div class="obra">
-            <div class="hot">HOT</div>
-            <img src="css/Imagenes/campera.JPG" alt="Obra">
-            <div class="obra_nombre">Camisa</div>
-        </div>
-        </div>
+
+            <div class="obra">
+                <div class="hot">HOT</div>
+                <img src="css/Imagenes/casa.JPG" alt="Obra">
+                <div class="obra_nombre">Casa</div>
+            </div>
+
+            <div class="obra">
+                <div class="hot">HOT</div>
+                <img src="css/Imagenes/reloj.JPG" alt="Obra">
+                <div class="obra_nombre">Reloj</div>
+            </div>
+
+            <div class="obra">
+                <div class="hot">HOT</div>
+                <img src="css/Imagenes/cirulo_sol.JPG" alt="Obra">
+                <div class="obra_nombre">Paisaje en Circulo</div>
+            </div>
+
+            <div class="obra">
+                <div class="hot">HOT</div>
+                <img src="css/Imagenes/cabeza.jpg" alt="Obra">
+                <div class="obra_nombre">Cabeza</div>
+                <!-- </div> -->
+            </div>
+            <div class="obra">
+                <div class="hot">HOT</div>
+                <img src="css/Imagenes/campera.JPG" alt="Obra">
+                <div class="obra_nombre">Camisa</div>
+            </div>
 
         </div>
     </section>
